# daia

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CI_SETUP.md  LICENSE  Makefile  README.md  main.py  pyproject.toml  renovate.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  github-pages.yml  pages.yml  quick-check.yml  test-matrix.yml
commands/: __init__.py  admin_commands.py  chat_commands.py
config/: chat_sys_prompt.txt.example  runtime.yml  runtime.yml.example
docs/: BingSiteAuth.xml  Gemfile  README.md  _config.yml  configuration-usage.md  configuration.md  development.md  faq.md  getting-started.md  index.md  project-structure.md  quick-reference.md  roadmap.md  troubleshooting.md  usage.md
docs/assets/css/: custom.css
nodes/: __init__.py  contextual_system_prompt.py  fetch_history.py  llm_chat.py  process_history.py  send_response.py  table_extractor.py  table_renderer.py
services/: __init__.py  llm_service.py
tests/: README.md  __init__.py  conftest.py  test_config_utils.py  test_discord_helpers.py  test_imports.py  test_nodes.py  test_shared_store_builder.py  test_utils.py
utils/: __init__.py  config_utils.py  discord_helpers.py  download_font.py  llm_router.py  runtime_config.py  shared_store_builder.py
