[project]
name = "daia"
version = "0.1.0"
description = "Discord AI Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.5.2",
    "google-genai>=1.30.0",
    "openai>=1.100.1",
    "pillow>=11.3.0",
    "pocketflow>=0.0.3",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "coverage>=7.10.4",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.10",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
